--- a/templates/page/list.html.twig
+++ b/templates/page/list.html.twig
@@ -6,7 +6,7 @@
             <div class="list list--page-list">
                 {% for page in pages %}
                     <div class="list-item">
-                        {{ include('@page/view/teaser.html.twig', {'item' : page}) }}
+                        {{ include('@page/views/teaser.html.twig', {'item' : page}) }}
                     </div>
                 {% endfor %}
             </div>
