edit & delete page

--- a/templates/page/form/delete.html.twig
+++ b/templates/page/form/delete.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout/layout-two-cols-4-8.html.twig' %}
 
 {% block regionRight %}
-    <div class="block block--page-add">
+    <div class="block block--page-delete">
         <div class="block-content">
             {{ form(form) }}
         </div>
