Add comment form

--- a/templates/page/view.html.twig
+++ b/templates/page/view.html.twig
@@ -7,7 +7,22 @@
             <div class="field field-body">{{ page.body }}</div>
             <div class="field field-category">{{ page.category.name }}</div>
             <div class="field field-created">{{ page.created|date('d-m-Y') }}</div>
-            <div class="field field-comments">{{ include('@comment/list.html.twig', {'items' : page.comments }) }}</div>
+
+{#            <div class="field field-comments">{{ include('@comment/list.html.twig', {'items' : page.comments }) }}</div>#}
+
+            <div class="field field-comments">
+                <div class="comment-preview">
+                    <h2 class="comment-title"> Comments : </h2>
+                    {{ form(comment_form) }}
+                    <div class="list">
+                        {% for item in page.comments %}
+                            <div class="list-item">
+                                {{ include('@comment/views/teaser.html.twig', { 'item' : item }) }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
